--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <body>
     <!--banner-->
     <nav>
-        <div>Blog</div>
-        <div>Welcome To MyBlog Room</div>
+        <div id="logo">Blog</div>
+        <div><a href="index.html">Welcome To MyBlog Room</a></div>
     </nav>
     <header>
       
