--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title></title>
-    <link href="" type="text/css"/>
+    <link href="./index.css" type="text/css"/>
   </head>
   <body>
     <!--banner-->
