--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DocTYPE>
 <html>
   <head>
+   <meta charset="utf-8">
     <title></title>
     <link href='http://cdn.webfont.youziku.com/webfonts/nomal/110606/45817/5a0c0363f629d807007cbd01.css' rel='stylesheet' type='text/css' />
     <link href='http://cdn.webfont.youziku.com/webfonts/nomal/110606/47031/5a0c665bf629d80d6c63adfa.css' rel='stylesheet' type='text/css' />
@@ -8,17 +9,19 @@
     <link href='http://cdn.webfont.youziku.com/webfonts/nomal/110606/37509/5a0c68c5f629d80d6c63adfc.css' rel='stylesheet' type='text/css' />
     <link href="index.css" rel='stylesheet' type="text/css"/>
   </head>
+  
   <body>
     <!--banner-->
     <nav>
-        <div id="logo" class="csse6416844c1b00e">Blog</div>
+        <div id="logo" class="logo csse6416844c1b00e">Blog</div>
         <div class="thematic csse65991bf31b00e"><a href="index.html"> LCY'S Room</a></div>
-        <!-- <div class="author csse65991bf31b00e">廖承勇</div> -->
+          <div class="author csse65991bf31b00e">author:廖承勇</div> 
     </nav>
-    <header class="menu csse659d3c681b00e"><div>Menu</div></header>
+    <header class="menu csse659d3c681b00e"><div>Menu :</div></header>
     <main>
       <ul>
-        <li class="csse65a28c741b00e"><a href="">My first website Blog</a></li>
+        <li class="csse65a28c741b00e"><div><a href="">1&nbsp;Prelude</a></div></li>
+        <li class="csse65a28c741b00e"><div><a href="">2 My first website Blog</a></div></li>
       </ul>
     </main>
     <script src="./index.js" type="text/javascript"></script>
