--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
       <ul>
         <li class="csse65a28c741b00e"><div><a href="">1&nbsp;Prelude</a></div></li>
-        <li class="csse65a28c741b00e"><div><a href="">2 My first website Blog</a></div></li>
+        <li class="csse65a28c741b00e"><div><a href="">2 My first Blog website</a></div></li>
       </ul>
     </main>
     <script src="./index.js" type="text/javascript"></script>
